<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:background="#f2f2f2"
    android:layout_height="match_parent"
    tools:context=".signUp">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="45dp"
        android:hint="@string/enter_your_e_mail"
        android:id="@+id/sign_up_email">
    </EditText>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:hint="@string/enter_your_password"
        android:id="@+id/sign_up_password">
    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:hint="@string/re_enter_your_password"
        android:id="@+id/re_enter_password">
    </EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="45dp"
        android:id="@+id/btn_signUP"
        android:layout_marginRight="80dp"
        android:layout_marginLeft="80dp">
    </Button>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:id="@+id/back_to_login_page"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="45dp"
        android:text="@string/back_to_log_in_page">
    </TextView>
</LinearLayout>