<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#f2f2f2"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="false"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center_horizontal"
            android:text="@string/welcome_back"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="45sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:gravity="center_horizontal"
            android:text="@string/log_in"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="45sp" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:hint="@string/enter_your_e_mail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_logIn"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="0dp"
            android:padding="20dp"
            android:text="@string/log_in"
            android:textSize="32sp"
            app:cornerRadius="8dp">

        </Button>

        <Button
            android:id="@+id/btn_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="0dp"
            android:drawableLeft="@drawable/google"
            android:padding="0dp"
            android:text="@string/sign_in_with_google"
            android:textColor="#000000"
            android:textSize="18sp"
            app:backgroundTint="#FFFCFC"
            app:cornerRadius="8dp"/>

        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:background="#464081"
            android:drawableLeft="@drawable/facebook"
            android:padding="0dp"
            android:text="@string/sign_in_with_facebook"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:backgroundTint="#3c5793"
            app:cornerRadius="18dp"/>


        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:gravity="right"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/need_account_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/need_account_sign_up"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>