<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:background="#f2f2f2"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".forgot_password">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/forgot_password_"
        android:textSize="42sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="Don't worry, we are here..."
        android:textSize="20sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

    <EditText
        android:id="@+id/forgotpassword_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="textEmailAddress" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submit"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="60dp">
    </Button>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:id="@+id/go_to_login_page"
        android:textColor="@color/black"
        android:text="@string/go_to_login_page"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

</LinearLayout>